# x402-radix

./: .env.example  .gitignore  ARCHITECTURE.md  BRIEF.md  DEPLOYMENT.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
crates/x402-radix-wasm/: Cargo.toml
crates/x402-radix-wasm/src/: builder.rs  lib.rs
scripts/: e2e-stokenet.ts  keygen.ts
specs/: scheme_exact_radix.md
