[package]
name = "x402-radix-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM helpers for x402 Radix V2 transaction building"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
radix-common = "1.3.1"
radix-transactions = "1.3.1"
sbor = "1.3.1"
hex = "0.4"

[profile.release]
opt-level = "s"
lto = true
